@@ -5,7 +5,9 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -14,6 +16,8 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import stackoverflow.auth.filter.JwtAuthenticationFilter;
 import stackoverflow.auth.filter.JwtVerificationFilter;
+import stackoverflow.auth.handler.MemberAccessDeniedHandler;
+import stackoverflow.auth.handler.MemberAuthenticationEntryPoint;
 import stackoverflow.auth.handler.MemberAuthenticationFailureHandler;
 import stackoverflow.auth.handler.MemberAuthenticationSuccessHandler;
 import stackoverflow.auth.jwt.JwtTokenizer;
@@ -22,9 +26,11 @@ import stackoverflow.auth.util.CustomAuthorityUtils;
 import java.util.Arrays;
 import java.util.List;
 
+import static org.springframework.http.HttpMethod.*;
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
+@EnableWebSecurity(debug = true)
 public class SecurityConfiguration {
     private final JwtTokenizer jwtTokenizer;
     private final CustomAuthorityUtils authorityUtils;
@@ -41,46 +47,34 @@ public class SecurityConfiguration {
                 .and()
                 .csrf().disable()
                 .cors(withDefaults())
+                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
                 .formLogin().disable()
                 .httpBasic().disable()
-                .apply(new CustomFilterConfigurer())   // (1)
+                .exceptionHandling()
+                .authenticationEntryPoint(new MemberAuthenticationEntryPoint())
+                .accessDeniedHandler(new MemberAccessDeniedHandler())
+                .and()
+                .apply(new CustomFilterConfigurer())
                 .and()
                 .authorizeHttpRequests(authorize -> authorize
+                        .antMatchers("/", "/error", "/webjars/**","/h2-console/**" ).permitAll()
+                        .antMatchers(POST, "/auth/login").permitAll()
+                        .antMatchers(POST, "/members").permitAll()
+                        .antMatchers(GET, "/members/profile").hasRole("USER")
+                        .antMatchers(GET, "/members/*").permitAll()
+                        .antMatchers(POST, "/questions").hasRole("USER")
+                        .antMatchers(GET, "/questions").permitAll()
+                        .antMatchers(PATCH, "/questions/").hasRole("USER")
+                        .antMatchers(PATCH, "/questions/*").hasRole("USER")
+                        .antMatchers(DELETE, "/questions/*").hasRole("USER")
+                        .antMatchers(POST, "/questions/*/answers").hasRole("USER")
+                        .antMatchers(DELETE, "/answers/*").hasRole("USER")
+                        .antMatchers(PATCH, "/answers/*").hasRole("USER")
                         .anyRequest().permitAll()
                 );
         return http.build();
     }
-
-//        http
-//                .csrf().disable()
-//                .cors(withDefaults())
-//                .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-//                .and()
-//                .formLogin().disable()
-//                .httpBasic().disable()
-//                .exceptionHandling()
-//                .authenticationEntryPoint(new MemberAuthenticationEntryPoint())
-//                .accessDeniedHandler(new MemberAccessDeniedHandler())
-//                .and()
-//                .apply(new CustomFilterConfigurer())
-//                .and()
-//                .authorizeHttpRequests(authorize -> authorize
-//                        .antMatchers(POST, "/auth/login").permitAll()
-//                        .antMatchers(POST, "/members").permitAll()
-//                        .antMatchers(GET, "/members/profile").hasRole("MEMBER")
-//                        .antMatchers(GET, "/members/*").permitAll()
-//                        .antMatchers(POST, "/questions").hasRole("MEMBER")
-//                        .antMatchers(GET, "/questions").permitAll()
-//                        .antMatchers(PATCH, "/questions/").hasRole("MEMBER")
-//                        .antMatchers(PATCH, "/questions/*").hasRole("MEMBER")
-//                        .antMatchers(DELETE, "/questions/*").hasRole("MEMBER")
-//                        .antMatchers(POST, "/questions/*/answers").hasRole("MEMBER")
-//                        .antMatchers(DELETE, "/answers/*").hasRole("MEMBER")
-//                        .antMatchers(PATCH, "/answers/*").hasRole("MEMBER")
-//                        .anyRequest().denyAll()
-//                );
-//        return http.build();
-//    }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -90,10 +84,8 @@ public class SecurityConfiguration {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "HEAD"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
